--- a/lightbox.css
+++ b/lightbox.css
@@ -1,6 +1,6 @@
 /* Preload images */
 body:after {
-  content: url(../img/close.png) url(../img/loading.gif) url(../img/prev.png) url(../img/next.png);
+  content: url(close.png) url(loading.gif) url(prev.png) url(next.png);
   display: none;
 }
 
